added titles to codepen slides

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<main class="rainbow">
 
 			<article id="title" class="title centerblock center relative">
-				<p class="instructions center">I rolled my own slide deck. Wasn't the best plan, it's really quite janky!
+				<p class="instructions">I rolled my own slide deck. Wasn't the best plan, it's really quite janky!
 					<br>Click to toggle the <button onClick="slideshowToggle()">reader view</button> or hover your cursor down to the bottom-left and click the Slideshow button there.
 					<br>There's another hoverable <button onClick="modeSwitcher()">color mode</button> button bottom-right for toggling light, dark and auto modes.
 					<br>Otherwise browse around with your arrow keys and enjoy the jank!
@@ -272,6 +272,7 @@
 			</article>
 
 			<article id="scheme-demo">
+				<h2 class="small-title"><code>color-scheme</code> demo</h2>
 				<iframe scrolling="no" src="https://codepen.io/sarajw/embed/LYvgxaZ?default-tab=html%2Cresult&editable=true" frameborder="no" allowtransparency="true" allowfullscreen="true"></iframe>
 			</article>
 
@@ -449,6 +450,7 @@
 			</article>
 
 			<article id="css-only-demo">
+				<h2 class="small-title"><code>:has()</code> rocks!</h2>
 				<iframe scrolling="no" src="https://codepen.io/sarajw/embed/XWvXvGe?default-tab=html%2Cresult&editable=true" frameborder="no" allowtransparency="true" allowfullscreen="true"></iframe>
 			</article>
 
@@ -463,15 +465,29 @@
 				</div>
 			</article>
 
+			<article id="keiths-maxim">
+				<h2>Jeremy Keith's maxim</h2>
+				<div class="center">
+					<div class="hide">
+						<p><i>"JavaScript should only do what only JavaScript can do."</i></p>
+						<br>
+						<img width="600" src="/images/keiths-maxim.jpg" alt="Jeremy Keith standing in front of a screen at a conference.">
+					</div>
+				</div>
+			</article>
+
 			<article id="with-js-demo">
+				<h2 class="small-title">simple functions</h2>
 				<iframe scrolling="no" src="https://codepen.io/sarajw/embed/abeoGjz?default-tab=html%2Cresult&editable=true" frameborder="no" allowtransparency="true" allowfullscreen="true"></iframe>
 			</article>
 
 			<article id="with-storage-demo">
+				<h2 class="small-title">saving to <code>localStorage</code></h2>
 				<iframe scrolling="no" src="https://codepen.io/sarajw/embed/vYoyVEW?default-tab=html%2Cresult&editable=true" frameborder="no" allowtransparency="true" allowfullscreen="true"></iframe>
 			</article>
 
 			<article id="with-aria-demo">
+				<h2 class="small-title">using <code>aria-pressed</code> for buttons</h2>
 				<iframe scrolling="no" src="https://codepen.io/sarajw/embed/PoMbXNp?default-tab=html%2Cresult&editable=true" frameborder="no" allowtransparency="true" allowfullscreen="true"></iframe>
 			</article>
 
