--- a/index.html
+++ b/index.html
@@ -568,12 +568,12 @@
 			<article id="thankyou">
 				<h2>thank you!</h2>
 				<div>
-					<br>
 					<p class="center">I'm so happy to be taking part in the Hamburger DevFest!</p>
-					<p class="center">🙏💖⚓</p>
 					<br>
+					<p class="center">🙏💖⚓</p>
 					<p class="right">🏠 <a href="https://sarajoy.dev">sarajoy.dev</a>
 						<br>👋 <a href="https://front-end.social/@sarajw">@sarajw@front-end.social</a>
+						<br>🛝 (slides) <a href="https://devfest2024hh.sarajoy.dev/">devfest2024hh.sarajoy.dev</a>
 				</div>
 			</article>
 
